tests/semantic/valid/test_fn_call.src
fn add(int a, int b) : int {
    return a + b;
}

fn main() : void {
    int result = add(1, 2);
}
