tests/semantic/invalid/test_arg_count.src
fn add(int a, int b) : int {
    return a + b;
}

fn main() : void {
    int r = add(1);
}
